# Rikka-Bot

./: .env.template  .gitignore  Dockerfile  README.md  Readme.md  config.json.template  docker-compose.yml  pyproject.toml  requirements.txt  soul.md.template  start.bat  start.sh
.github/workflows/: ci.yml
api/: index.py  requirements.txt
scripts/: bot_setup.sh  start.sh
src/: config.py  crypto.py  scheduler.py
src/agent/: agent.py
src/agents/: agent_bus.py  agent_factory.py  agent_models.py  base_agent.py  rikka_agent.py  rk_agent.py
src/agents/background/: __init__.py  manager.py  script_watcher.py  watchers.py
src/bot/: app.py
src/core/: __init__.py  complexity.py  context.py  models.py  orchestrator.py  tools.py
src/db/: background_store.py  chat_store.py  connection.py  key_store.py  migrate.py  vector_store.py
src/db/migrations/: 001_initial.sql  002_key_blacklist_log.sql  003_history_and_memory.sql  004_history_metadata.sql  005_background_agents.sql  006_command_audit.sql  007_memory_efficiency.sql
src/live/: live_bubble.py
src/providers/: __init__.py  base_provider.py  g4f_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openrouter_provider.py  provider_pool.py  unblacklist_scheduler.py
src/tools/: code_runner_tool.py  command_security.py  curl_tool.py  registry.py  sandbox.py  schemas.py  shell_tool.py  web_search_tool.py  wikipedia_tool.py  workspace.py
src/utils/: consistency.py  logger.py  parse_keys.py  retry.py
tests/: test_crypto.py  test_parse_keys.py  test_provider_pool.py
(+1 files in other folders)
